# stillwater-backend

./: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
contracts/: PLAN.md  foundry.toml
crates/analytics/: Cargo.toml  IMPERMANENT_LOSS.md  README.md
crates/analytics/src/: lib.rs  pnl.rs  utils.rs
crates/api/: Cargo.toml
crates/api/src/: config.rs  main.rs  state.rs
crates/api/src/handlers/: positions.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: blockchain.rs  lib.rs  pnl.rs  pool.rs  position.rs  snapshot.rs  swap.rs
docker/: docker-compose.yml  justfile
migrations/: 001_initial_schema.sql
src/: config.rs  lib.rs  main.rs  state.rs
src/contracts/: mod.rs
src/services/: cache.rs  database.rs
