[package]
name = "stillwater"
version = "0.1.0"
edition = "2024"

[lib]
name = "stillwater"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Ethereum dependencies
alloy = { version = "0.8", features = ["full", "node-bindings", "signer-local"] }
alloy-sol-types = "0.8"
