[package]
name = "stillwater-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stillwater-api"
path = "src/main.rs"

[dependencies]
# Internal
stillwater-models = { workspace = true }
stillwater-db = { workspace = true }
stillwater-indexer = { workspace = true }
stillwater-analytics = { workspace = true }

# Web framework
axum = { workspace = true }

# Database & Cache
sqlx = { workspace = true }
redis = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment
dotenv = { workspace = true }

# Error handling
anyhow = { workspace = true }
